docs/book/samples/appc/order_types_check.out
error[formatting]: canonical order places type declarations before functions; move `bravo` up
  --> order_types_check.kso:4:6
   4 | type bravo
            ^
