docs/book/samples/appc/order_types_check.kso
fn alpha x
  x

type bravo
  n:int

main = print "{alpha 1}"
